# firebase-admin-sdk-rs

./: CHANGELOG.md  Cargo.toml  GEMINI.md  README.md
src/: lib.rs
src/auth/: keys.rs  middleware.rs  mod.rs  models.rs  project_config.rs  project_config_impl.rs  tenant_mgt.rs  tests.rs  verifier.rs
src/core/: middleware.rs  mod.rs
src/crashlytics/: mod.rs  tests.rs
src/firestore/: batch.rs  listen.rs  mod.rs  models.rs  query.rs  reference.rs  snapshot.rs  tests.rs  transaction.rs
src/messaging/: mod.rs  models.rs  tests.rs
src/remote_config/: mod.rs  models.rs  tests.rs
src/storage/: bucket.rs  file.rs  mod.rs  tests.rs
