[package]
name = "firebase-admin-sdk"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
reqwest-middleware = { version = "0.3", features = ["json"] }
reqwest-retry = "0.5"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
jsonwebtoken = "9"
yup-oauth2 = "8"
thiserror = "1.0"
url = "2.5"
anyhow = "1.0"
async-trait = "0.1"
hyper-rustls = "0.24"
hyper = "0.14"
http = "1.0"
futures = { version = "0.3.31", optional = true }
bytes = { version = "1.11.0", optional = true }
chrono = { version = "0.4.43", features = ["serde"] }


[dev-dependencies]
httpmock = "0.8.2"

[features]
default = ["auth", "crashlytics", "firestore", "messaging", "remote_config", "storage"]
auth = []
crashlytics = []
firestore = ["dep:futures", "dep:bytes"]
messaging = ["reqwest/multipart"]
remote_config = []
storage = ["dep:bytes"]
