[package]
name = "firebase-admin-sdk"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.13", features = ["json", "rustls"] }
reqwest-middleware = { version = "0.5", features = ["json", "query"] }
reqwest-retry = "0.9"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
jsonwebtoken = { version = "10", features = ["rust_crypto"] }
yup-oauth2 = "12"
thiserror = "2.0"
url = "2.5"
anyhow = "1.0"
async-trait = "0.1"
hyper-rustls = "0.27"
hyper = "1.0"
hyper-util = { version = "0.1", features = ["client-legacy"] }
http = "1.1"
futures = { version = "0.3", optional = true }
bytes = { version = "1.10", optional = true }
chrono = { version = "0.4", features = ["serde"] }


[dev-dependencies]
httpmock = "0.8"

[features]
default = ["auth", "crashlytics", "firestore", "messaging", "remote_config", "storage"]
auth = []
crashlytics = []
firestore = ["dep:futures", "dep:bytes"]
messaging = ["reqwest/multipart"]
remote_config = []
storage = ["dep:bytes"]
